[gd_scene load_steps=23 format=3 uid="uid://6o0ppecfcqvo"]

[ext_resource type="Script" path="res://scripts/unit.gd" id="1_g8wtp"]
[ext_resource type="Texture2D" uid="uid://lye5duy0xovt" path="res://sprites/Units/imp.png" id="2_ey7t7"]
[ext_resource type="Resource" uid="uid://c4f7ps81w2mm8" path="res://resources/units/imp.tres" id="2_fg4vb"]
[ext_resource type="Texture2D" uid="uid://cc3bd3vpufmr1" path="res://sprites/Items/axe.png" id="3_xcimi"]
[ext_resource type="Texture2D" uid="uid://cdvowh1o7tq3" path="res://sprites/summon_portal.png" id="4_134da"]
[ext_resource type="AudioStream" uid="uid://bdhx5imabp37l" path="res://sounds/gather.wav" id="4_oaxnj"]
[ext_resource type="AudioStream" uid="uid://bqbsi8axo42ns" path="res://sounds/summon2.wav" id="6_y570h"]
[ext_resource type="AudioStream" uid="uid://dvjldnr6m8v88" path="res://sounds/fight1.wav" id="7_1e24m"]
[ext_resource type="Texture2D" uid="uid://b3x6li0gxqf6n" path="res://sprites/UI/Bar 16x4.png" id="9_n1q2q"]
[ext_resource type="Texture2D" uid="uid://dyuwwfjlqiy0c" path="res://sprites/UI/FrameBar 16x4.png" id="10_mvtfb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q6nlr"]
atlas = ExtResource("4_134da")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihga4"]
atlas = ExtResource("4_134da")
region = Rect2(0, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pox06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6nlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihga4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c0mvu"]

[sub_resource type="Animation" id="Animation_liuno"]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.267943),
"update": 0,
"values": [0.0, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2, 0), Vector2(-7, -3), Vector2(-10, 2.38419e-07), Vector2(-13, 3), Vector2(-14, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 0.217638),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/ItemParent/Item:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5, 0), Vector2(9.53674e-07, -4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shadow:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 1), Vector2(2, 0), Vector2(-3, -4), Vector2(-7, -3), Vector2(-10, 0), Vector2(-13, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shadow:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.267943),
"update": 0,
"values": [0.0, -1.5708]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"kill"
}]
}

[sub_resource type="Animation" id="Animation_h726y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/ItemParent/Item:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Shadow:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kchxp"]
resource_name = "spawn"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(7.72749, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(7.72749, 1),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SummonAnimation:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 4, 5),
"transitions": PackedFloat32Array(7.46425, 1, 7.72, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(7.46426, 1),
"update": 0,
"values": [Vector2(2, 1e-05), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(7.56, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shadow:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 0)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["Idle"],
"method": &"next_anim"
}]
}

[sub_resource type="Animation" id="Animation_3naxv"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 0.75), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0hjv3"]
resource_name = "Idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1yred"]
_data = {
"Dead": SubResource("Animation_liuno"),
"Idle": SubResource("Animation_0hjv3"),
"RESET": SubResource("Animation_h726y"),
"spawn": SubResource("Animation_kchxp"),
"walk": SubResource("Animation_3naxv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_exkfb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ltbtx"]

[node name="Unit" type="CharacterBody2D"]
self_modulate = Color(1, 1, 1, 0)
z_index = 2
position = Vector2(0, 4)
collision_layer = 129
collision_mask = 0
script = ExtResource("1_g8wtp")
type = ExtResource("2_fg4vb")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true

[node name="ActionIcon" type="Sprite2D" parent="."]
position = Vector2(0, -20)

[node name="SummonAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(1e-05, 1e-05)
sprite_frames = SubResource("SpriteFrames_pox06")
autoplay = "default"

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0.294118)
skew = 0.523599
texture = ExtResource("2_ey7t7")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 1e-05)
texture = ExtResource("2_ey7t7")

[node name="ItemParent" type="Node2D" parent="Sprite"]

[node name="Item" type="Sprite2D" parent="Sprite/ItemParent"]
z_index = -1
position = Vector2(5, 0)
texture = ExtResource("3_xcimi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_c0mvu")

[node name="gather" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_oaxnj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1yred")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_exkfb")

[node name="attac_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="attac_area"]
shape = SubResource("CapsuleShape2D_ltbtx")
debug_color = Color(0.952941, 0, 0.552941, 0.419608)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_y570h")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1e24m")

[node name="HPBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -8.0
offset_top = -15.0
offset_right = 8.0
offset_bottom = -11.0
max_value = 15.0
value = 15.0
texture_under = ExtResource("9_n1q2q")
texture_over = ExtResource("10_mvtfb")
texture_progress = ExtResource("9_n1q2q")
tint_under = Color(0.152941, 0.152941, 0.152941, 1)
tint_over = Color(0.152941, 0.152941, 0.152941, 1)
tint_progress = Color(1, 0, 0, 1)

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
